# FES

./: README.md  setup.cfg
fractal_encryption/: __init__.py  encryption.py  fractal_generator.py
tests/: test_fractal_encryption.py
