[metadata]
name = fractal_encryption
version = 0.1.0
description = A fractal-based encryption system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sktryo/fractal_encryption
author = sktryo
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = fractal_encryption
